--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-number-selector": "^1.0.1",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.5.0",
