--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@react-native-community/slider": "^4.4.2",
+    "@react-native-firebase/firestore": "^17.5.0",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.5",
     "expo": "~48.0.6",
     "expo-status-bar": "~1.4.4",
-    "firebase": "^9.18.0",
+    "firebase": "^9.6.2",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
